[package]
name = "rjson"
version = "0.2.1"
authors = ["yw662 <yw662@njit.edu>"]
edition = "2018"
description = "A minimal json parser"
repository = "https://github.com/yw662/rjson"
readme = "readme.md"
license = "MIT"

[lib]
name = "rjson"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
